+ simple dev server

--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
 
 <head>
-    <script src="file://C:/Users/homi/Desktop/PrankJS/dist/prankjs.umd.js"></script>
+    <!-- <script src="file://C:/Users/homi/Desktop/PrankJS/dist/prankjs.umd.js"></script> -->
+    <script src="dist/prankjs.umd.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 
 <body>
-
+sdfsdfsdf sdf 
     <a href="https://google.gr"> test </a>
     <script>
 
-        PrankJS.randomFloatingObjects('https://s3.amazonaws.com/izotopedownloads/docs/ozone9/en/images/imager/module-interface.png');
+        PrankJS.Pranks.randomFloatingObjects('https://s3.amazonaws.com/izotopedownloads/docs/ozone9/en/images/imager/module-interface.png');
         // PrankJS.fakeError('https://s3.amazonaws.com/izotopedownloads/docs/ozone9/en/images/imager/module-interface.png');
     </script>
 </body>
