--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <!-- <script src="file://C:/Users/homi/Desktop/PrankJS/dist/prankjs.umd.js"></script> -->
     <script src="dist/prankjs.umd.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-sdfsdfsdf sdf 
+  <body>
+    sdfsdfsdf sdf
     <a href="https://google.gr"> test </a>
     <script>
+      PrankJS.Pranks.randomFloatingObjects(
+        "https://s3.amazonaws.com/izotopedownloads/docs/ozone9/en/images/imager/module-interface.png",
+      );
+      // PrankJS.fakeError('https://s3.amazonaws.com/izotopedownloads/docs/ozone9/en/images/imager/module-interface.png');
 
-        PrankJS.Pranks.randomFloatingObjects('https://s3.amazonaws.com/izotopedownloads/docs/ozone9/en/images/imager/module-interface.png');
-        // PrankJS.fakeError('https://s3.amazonaws.com/izotopedownloads/docs/ozone9/en/images/imager/module-interface.png');
+      PrankJS.Pranks.invertColors();
     </script>
-</body>
-
+  </body>
 </html>
