feat(invertColors): make the function more customizable using parameters

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       );
       // PrankJS.fakeError('https://s3.amazonaws.com/izotopedownloads/docs/ozone9/en/images/imager/module-interface.png');
 
-      PrankJS.Pranks.invertColors();
+      PrankJS.Pranks.invertColors(5000, 1000, 5);
     </script>
   </body>
 </html>
