--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,75 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- <script src="file://C:/Users/homi/Desktop/PrankJS/dist/prankjs.umd.js"></script> -->
-    <script src="dist/prankjs.umd.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Prank.JS 🎉</title>
+
+    <script src="dist/prankjs.umd.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body>
-    sdfsdfsdf sdf
-    <a href="https://google.gr"> test </a>
-    <script>
-      PrankJS.Pranks.randomFloatingObjects(
-        "https://s3.amazonaws.com/izotopedownloads/docs/ozone9/en/images/imager/module-interface.png",
-      );
-      // PrankJS.fakeError('https://s3.amazonaws.com/izotopedownloads/docs/ozone9/en/images/imager/module-interface.png');
+  <body
+    class="antialiased min-h-screen bg-[#FF1B50] text-white relative overflow-hidden flex flex-col items-center justify-center p-4"
+  >
+    <!-- Background -->
+    <div
+      class="absolute inset-0 bg-[radial-gradient(circle_at_center,transparent_0%,rgba(0,0,0,0.2)_100%)]"
+    ></div>
+    <div
+      class="absolute inset-0"
+      style="
+        background: repeating-conic-gradient(
+          from 0deg,
+          transparent 0deg,
+          transparent 20deg,
+          rgba(0, 0, 0, 0.1) 20deg,
+          rgba(0, 0, 0, 0.1) 25deg
+        );
+        transform: scale(2);
+      "
+    ></div>
 
-      PrankJS.Pranks.invertColors(5000, 1000, 5);
+    <div class="bg-[#FF1B50]/85 relative z-10 text-center mb-8 p-4 rounded-xl">
+      <h1 class="text-6xl font-bold">
+        <span class="py-2 rounded">Prank.Js🎉</span>
+      </h1>
+
+      <h2 class="text-2xl font-bold mt-8">Try Some Pranks!</h2>
+      <div class="mt-4 flex flex-wrap justify-center gap-4">
+        <button
+          id="random-floating-object-btn"
+          class="p-4 rounded-lg bg-yellow-400 text-black hover:bg-yellow-300 font-semibold"
+        >
+          Random Floating Objects
+        </button>
+
+        <button
+          id="invert-colors-btn"
+          class="p-4 rounded-lg bg-yellow-400 text-black hover:bg-yellow-300 font-semibold"
+        >
+          Invert Colors
+        </button>
+      </div>
+    </div>
+
+    <script>
+      const randomFloatingObjectsBtn = document.getElementById(
+        "random-floating-object-btn",
+      );
+      const invertColorsBtn = document.getElementById("invert-colors-btn");
+
+      randomFloatingObjectsBtn.addEventListener("click", function () {
+        PrankJS.Pranks.randomFloatingObjects(
+          "https://s3.amazonaws.com/izotopedownloads/docs/ozone9/en/images/imager/module-interface.png",
+        );
+      });
+
+      invertColorsBtn.addEventListener("click", function () {
+        PrankJS.Pranks.invertColors(5000, 1000, 5);
+      });
+
+      // PrankJS.fakeError('https://s3.amazonaws.com/izotopedownloads/docs/ozone9/en/images/imager/module-interface.png');
     </script>
   </body>
 </html>
